--- a/面试题/css/1.两种以上方式实现已知或者未知宽度的垂直水平居中.html
+++ b/面试题/css/1.两种以上方式实现已知或者未知宽度的垂直水平居中.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,16 +12,20 @@
     padding: 0;
     margin: 0;
   }
-  body,html {
+
+  body,
+  html {
     width: 100%;
     height: 100%;
   }
+
   .wrap1 {
     position: relative;
     width: 100%;
     height: 100%;
     background: gray;
   }
+
   .fixed-box {
     position: absolute;
     left: 50%;
@@ -31,6 +36,7 @@
     background: red;
     width: 400px;
   }
+
   /* 未知宽高上下居中 */
   .auto-box {
     background: pink;
@@ -45,6 +51,7 @@
     width: 600px;
     height: 600px;
   }
+
   .wrap2 .box {
     display: table-cell;
     vertical-align: middle;
@@ -59,10 +66,11 @@
     justify-content: center;
     align-items: center;
     height: 400px;
-    width:  400px;
+    width: 400px;
     background: yellow;
   }
 </style>
+
 <body>
   <div class="wrap1">
     <div class="fixed-box">
@@ -78,11 +86,12 @@
     </div>
   </div>
   <div class="wrap3">
-      <div class="box">
-        asdfasdf
-      </div>
+    <div class="box">
+      asdfasdf
     </div>
+  </div>
 </body>
+
 </html>
 <!-- 
 // 1
