--- a/面试题/练习环境/2.jsonp.html
+++ b/面试题/练习环境/2.jsonp.html
@@ -8,8 +8,7 @@
   </head>
   <body>
     <script>
-      const jsonp = (url, params) => {
-      };
+      const jsonp = (url, params) => {};
 
       const fn = () => {
         jsonp("https://www.baidu.com/sugrec", {
